--- a/src/pypolymlp/calculator/sscha/utils/README
+++ b/src/pypolymlp/calculator/sscha/utils/README
@@ -1,1 +1,3 @@
-python3 ~/git/pypolymlp/src/pypolymlp/calculator/sscha/utils/sampling.py sscha/2000.0/sscha_results.yaml sscha/2000.0/fc2.hdf5 polymlp.lammps
+python3 ~/git/pypolymlp/src/pypolymlp/calculator/sscha/utils/distribution.py sscha/2000/sscha_results.yaml sscha/2000/fc2.hdf5 polymlp.lammps
+
+python3 ~/git/pypolymlp/src/pypolymlp/calculator/sscha/utils/summary.py
