--- a/src/pypolymlp/calculator/sscha/utils/README
+++ b/src/pypolymlp/calculator/sscha/utils/README
@@ -3,3 +3,9 @@ python3 ~/git/pypolymlp/src/pypolymlp/calculator/sscha/utils/distribution.py ssc
 python3 ~/git/pypolymlp/src/pypolymlp/calculator/sscha/utils/summary.py
 
 python3 ~/git/pypolymlp/src/pypolymlp/str_gen/strgen_volume.py --poscar poscar_eqm
+
+python3 ~/git/pypolymlp/src/pypolymlp/calculator/sscha/utils/summary_eos.py --electronic electronic_free_energy.dat
+
+python3 ~/git/pypolymlp/src/pypolymlp/calculator/sscha/utils/find_tc.py --yaml bcc/free_energy.yaml hcp/free_energy.yaml
+
+python3 ~/git/pypolymlp/src/pypolymlp/calculator/sscha/utils/find_phase_boundary.py --yaml bcc/volume_dependence_with_elf_noimag.yaml hcp/volume_dependence_with_elf_noimag.yaml
