--- a/src/pypolymlp/calculator/rss/data/README
+++ b/src/pypolymlp/calculator/rss/data/README
@@ -1,1 +1,3 @@
 python3 ~/git/pypolymlp/src/pypolymlp/calculator/rss/data/vasp/summary.py -d ./finished --pot ../mlp/gtinv/polymlp.lammps
+
+python3 ~/git/pypolymlp/src/pypolymlp/calculator/rss/data/vasp/summary.py -d ./*/finished --pot ../../iter01/mlp/gtinv/mlp.lammps --elements Cu Ag Au --tol_distance 1e-4 --tol_energy 1e-5
