--- a/src/pypolymlp/calculator/sscha/utils/README
+++ b/src/pypolymlp/calculator/sscha/utils/README
@@ -1,4 +1,5 @@
-python3 ~/git/pypolymlp/src/pypolymlp/calculator/sscha/utils/distribution.py sscha/2000/sscha_results.yaml sscha/2000/fc2.hdf5 polymlp.lammps
+
+python3 ~/git/pypolymlp/src/pypolymlp/calculator/sscha/utils/distribution.py --yaml sscha/2000/sscha_results.yaml --fc2 sscha/2000/fc2.hdf5
 
 python3 ~/git/pypolymlp/src/pypolymlp/calculator/sscha/utils/summary.py
 
