Developing conditional pair parameters

--- a/tests/test_calc/SrTiO3/polymlp.lammps.flexible.2
+++ b/tests/test_calc/SrTiO3/polymlp.lammps.flexible.2
@@ -24,7 +24,7 @@ gtinv # feature_type
 False # electrostatic
 1 # gtinv_version
 1 # n_type_pairs
-0 0 # atom type pair
+0 0 8 # atom type pair
 0 1 2 3 4 5 6 7 # pair params indices
 0 # type_full
 2 # type_indices
