--- a/tests/test_calc/SrTiO3/polymlp.lammps.flexible.1
+++ b/tests/test_calc/SrTiO3/polymlp.lammps.flexible.1
@@ -25,17 +25,17 @@ gtinv # feature_type
 False # electrostatic
 1 # gtinv_version
 6 # n_type_pairs
-0 0 # atom type pair
+0 0 5 # atom type pair
 3 4 5 6 8 # pair params indices
-0 1 # atom type pair
+0 1 5 # atom type pair
 3 4 6 7 8 # pair params indices
-0 2 # atom type pair
+0 2 9 # atom type pair
 0 1 2 3 4 5 6 7 8 # pair params indices
-1 1 # atom type pair
+1 1 5 # atom type pair
 3 4 5 6 8 # pair params indices
-1 2 # atom type pair
+1 2 9 # atom type pair
 0 1 2 3 4 5 6 7 8 # pair params indices
-2 2 # atom type pair
+2 2 9 # atom type pair
 0 1 2 3 4 5 6 7 8 # pair params indices
 1 # type_full
 0 1 2 # type_indices
